<resources>
    <string name="app_name">ukl2</string>
    <string name="Judul">Pisang Goreng Mentega</string>
    <string name="email">.@narayaya</string>
    <string name="caraBuat1">1. Siapkan pisang raja lalu kupas dan belah menjadi 2</string>
    <string name="caraBuat2">2. Siapkan teflon, beri mentega. Panggang pisang ke 2 sisinya sampai kecoklatan lalu angkat dan tiriskan di piring saji</string>
    <string name="caraBuat3">3. Beri toping keju parut, susu kental manis dan meses. Sajikan Pisang goreng mentega selagi hangat</string>

</resources>